# InferEdge

./: .gitignore  README.md  run_paper_vm_benchmark.sh  suite.sh
Dockerfiles/: README.md
Dockerfiles/cadvisor_build/: Dockerfile
Dockerfiles/image_classification/: Dockerfile
build_scripts/: README.md
build_scripts/wasmedge/: inside_docker_amd64.sh  inside_docker_arm64.sh
cadvisor/: README.md  perf_config.json
data_scripts/: README.md  analyze_aggregate_data.py  analyze_data.py  collect_data.py
docker/: README.md
host_scripts/: README.md
host_scripts/model_generation/: gen_efficientnet_models.py  gen_mobilenet_models.py  gen_resnet_models.py
inputs/: README.md
libtorch/: README.md
models/: README.md
native/: README.md
prometheus/: README.md  prometheus.yml  recording_rules.yml
python/: README.md
python/host/: requirements.txt
rust/: README.md
rust/native/: Cargo.toml
rust/native/src/: main.rs
rust/wasm/: Cargo.toml
rust/wasm/.cargo/: config.toml
rust/wasm/src/: main.rs
target_scripts/: README.md  collect_data.sh  setup.sh
wasm/: README.md
wasmedge/: README.md
