[package]
name = "torch_image_classification"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
tch = "=0.3.1"

[profile.release]
opt-level = 1

[[bin]]
name = "torch_image_classification"
path = "src/main.rs"

[workspace]
