[package]
name = "wasmedge-wasinn-image-classification"
version = "0.1.0"
authors = ["Second-State"]
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
wasi-nn = { version = "0.6.0" }

[profile.release]
opt-level = 1
panic = "abort"

[[bin]]
name = "interpreted"
path = "src/main.rs"

[workspace]
